0.8/_sources/checks_gallery/tabular/model_evaluation/plot_model_info.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "checks_gallery/tabular/model_evaluation/plot_model_info.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_checks_gallery_tabular_model_evaluation_plot_model_info.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_checks_gallery_tabular_model_evaluation_plot_model_info.py:


.. _plot_tabular_model_info:

Model Info
**********

.. GENERATED FROM PYTHON SOURCE LINES 10-15

.. code-block:: default


    from sklearn.ensemble import AdaBoostClassifier

    from deepchecks.tabular.checks import ModelInfo








.. GENERATED FROM PYTHON SOURCE LINES 16-18

.. code-block:: default

    clf = AdaBoostClassifier(learning_rate=1.2)
    ModelInfo().run(clf)





.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Model Info</title>
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
                background-color: white;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
        <script>
            (!window.navigator.onLine ? alert('needs internet connection') : '');
        </script>
    </head>
    <body>
    
    <script src="" crossorigin="anonymous"></script>
    <script type="application/vnd.jupyter.widget-state+json">
    {
      "version_major": 2,
      "version_minor": 0,
      "state": {
        "dcc853f6deab4d7daf7c99d47e0be787": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html",
              "jp-RenderedHTMLCommon",
              "jp-RenderedHTML",
              "jp-OutputArea-output"
            ],
            "children": [
              "IPY_MODEL_dd6b1c0b4cda4f58b75d84647730ead1",
              "IPY_MODEL_f76dcc33dada4718ad3005c3a2fc55c8",
              "IPY_MODEL_1a9490ad167e4e6b9fe864f52b07468f",
              "IPY_MODEL_e8574d5feb584a168fff23db75979d09"
            ],
            "layout": "IPY_MODEL_9edaa61e8a0c4b059d9c6356d2b7f832"
          }
        },
        "dd6b1c0b4cda4f58b75d84647730ead1": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_a405b36ec1ea4fd889208010df6d5630",
            "style": "IPY_MODEL_d6770cefbbfa46c3b5d530a11532bc49",
            "value": "<h4><b>Model Info</b></h4>"
          }
        },
        "a405b36ec1ea4fd889208010df6d5630": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "d6770cefbbfa46c3b5d530a11532bc49": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "f76dcc33dada4718ad3005c3a2fc55c8": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_e27cd3e419a0404f954bda93feaa5926",
            "style": "IPY_MODEL_1b6f884daf93476282f478a1393a5f1a",
            "value": "<p>Summarize given model parameters.</p>"
          }
        },
        "e27cd3e419a0404f954bda93feaa5926": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "1b6f884daf93476282f478a1393a5f1a": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "1a9490ad167e4e6b9fe864f52b07468f": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_b63da4ed02484e7585dce60c0eeb80a8",
            "style": "IPY_MODEL_35602d496b7d4ccd9a2a4dc44b2b4b2b"
          }
        },
        "b63da4ed02484e7585dce60c0eeb80a8": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "35602d496b7d4ccd9a2a4dc44b2b4b2b": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "e8574d5feb584a168fff23db75979d09": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "children": [
              "IPY_MODEL_c3f5f1be75e5416594eeb1f6cbce8935",
              "IPY_MODEL_2c34ce43ce8f41888f7f0d181ff1977f",
              "IPY_MODEL_5e779f11aecd499e9790e19714ce97c6",
              "IPY_MODEL_6f8b8dee90b5423b94f2ce1120109371"
            ],
            "layout": "IPY_MODEL_52182d54cd91418190f93311894e7502"
          }
        },
        "c3f5f1be75e5416594eeb1f6cbce8935": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_133f1f066ced4282a42e54b65eda6306",
            "style": "IPY_MODEL_fe39da7f84c143cd85bcb014763edad0",
            "value": "<h5><b>Additional Outputs</b></h5>"
          }
        },
        "133f1f066ced4282a42e54b65eda6306": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "fe39da7f84c143cd85bcb014763edad0": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "2c34ce43ce8f41888f7f0d181ff1977f": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_8cd74b76569f4cb0ae2e9ae47b6bde9e",
            "style": "IPY_MODEL_812577b8186f4c98a1bd9a9c164688e4",
            "value": "<div>Model Type: AdaBoostClassifier</div>"
          }
        },
        "8cd74b76569f4cb0ae2e9ae47b6bde9e": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "812577b8186f4c98a1bd9a9c164688e4": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "5e779f11aecd499e9790e19714ce97c6": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_c3f3c54a7eed42e4a8c3e8a2cc518069",
            "style": "IPY_MODEL_d83e5da4c2d74a94a1ddff4d53200138",
            "value": "<style type=\"text/css\">\n#T_41ec0_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_41ec0_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_41ec0_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_41ec0_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_41ec0_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_41ec0_row2_col0, #T_41ec0_row2_col1, #T_41ec0_row2_col2 {\n  background-color: lightblue;\n}\n</style>\n<table id=\"T_41ec0_\">\n  <thead>\n    <tr>\n      <th class=\"col_heading level0 col0\" >Parameter</th>\n      <th class=\"col_heading level0 col1\" >Value</th>\n      <th class=\"col_heading level0 col2\" >Default</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_41ec0_row0_col0\" class=\"data row0 col0\" >algorithm</td>\n      <td id=\"T_41ec0_row0_col1\" class=\"data row0 col1\" >SAMME.R</td>\n      <td id=\"T_41ec0_row0_col2\" class=\"data row0 col2\" >SAMME.R</td>\n    </tr>\n    <tr>\n      <td id=\"T_41ec0_row1_col0\" class=\"data row1 col0\" >base_estimator</td>\n      <td id=\"T_41ec0_row1_col1\" class=\"data row1 col1\" >None</td>\n      <td id=\"T_41ec0_row1_col2\" class=\"data row1 col2\" >None</td>\n    </tr>\n    <tr>\n      <td id=\"T_41ec0_row2_col0\" class=\"data row2 col0\" >learning_rate</td>\n      <td id=\"T_41ec0_row2_col1\" class=\"data row2 col1\" >1.20</td>\n      <td id=\"T_41ec0_row2_col2\" class=\"data row2 col2\" >1.00</td>\n    </tr>\n    <tr>\n      <td id=\"T_41ec0_row3_col0\" class=\"data row3 col0\" >n_estimators</td>\n      <td id=\"T_41ec0_row3_col1\" class=\"data row3 col1\" >50</td>\n      <td id=\"T_41ec0_row3_col2\" class=\"data row3 col2\" >50</td>\n    </tr>\n    <tr>\n      <td id=\"T_41ec0_row4_col0\" class=\"data row4 col0\" >random_state</td>\n      <td id=\"T_41ec0_row4_col1\" class=\"data row4 col1\" >None</td>\n      <td id=\"T_41ec0_row4_col2\" class=\"data row4 col2\" >None</td>\n    </tr>\n  </tbody>\n</table>\n"
          }
        },
        "c3f3c54a7eed42e4a8c3e8a2cc518069": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "d83e5da4c2d74a94a1ddff4d53200138": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "6f8b8dee90b5423b94f2ce1120109371": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_e60bd8a57f774751a478e7b659304b7f",
            "style": "IPY_MODEL_7de90dffb7604b49badd1d4d936a1d19",
            "value": "<div><p style=\"font-size:0.7em\"><i>Colored rows are parameters with non-default values</i></p></div>"
          }
        },
        "e60bd8a57f774751a478e7b659304b7f": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "7de90dffb7604b49badd1d4d936a1d19": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "52182d54cd91418190f93311894e7502": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "9edaa61e8a0c4b059d9c6356d2b7f832": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        }
      }
    }
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "dcc853f6deab4d7daf7c99d47e0be787"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.041 seconds)


.. _sphx_glr_download_checks_gallery_tabular_model_evaluation_plot_model_info.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_model_info.py <plot_model_info.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_model_info.ipynb <plot_model_info.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
