0.9/_sources/checks_gallery/tabular/model_evaluation/plot_model_info.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "checks_gallery/tabular/model_evaluation/plot_model_info.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_checks_gallery_tabular_model_evaluation_plot_model_info.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_checks_gallery_tabular_model_evaluation_plot_model_info.py:


.. _plot_tabular_model_info:

Model Info
***********

This notebook provides an overview for using and understanding the Model Info check.

**Structure:**

* `What is the Model Info check? <#what-is-the-model-info-check>`__
* `Run the check <#run-the-check>`__


What is the Model Info check?
================================
The ``ModelInfo`` check produces a summary for the model parameters (number of estimators,
learning rate, verbosity etc.).

.. GENERATED FROM PYTHON SOURCE LINES 24-26

Imports
=============

.. GENERATED FROM PYTHON SOURCE LINES 26-30

.. code-block:: default

    from sklearn.ensemble import AdaBoostClassifier

    from deepchecks.tabular.checks import ModelInfo








.. GENERATED FROM PYTHON SOURCE LINES 31-33

Run the check
===============

.. GENERATED FROM PYTHON SOURCE LINES 33-35

.. code-block:: default

    clf = AdaBoostClassifier(learning_rate=1.2)
    ModelInfo().run(clf)





.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Model Info</title>
        <link rel="icon" type="image/x-icon" href="https://deepchecks.com/wp-content/themes/deepchecks/assets/favicons/favicon.ico">
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
                background-color: white;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
    </head>
    <body>
        <script src="https://unpkg.com/@jupyter-widgets/html-manager@^0.20.1/dist/embed.js" crossorigin="anonymous"></script>
    

    <script type="application/vnd.jupyter.widget-state+json">
    {"version_major": 2, "version_minor": 0, "state": {"bae0923e8b6c48d8aaece4bd5d7d420f": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "children": ["IPY_MODEL_232ea2e58c2c47edb3cca5d349451c24", "IPY_MODEL_e14216c120bd49558165e7ba71077d6f", "IPY_MODEL_94c2ed4f34ec426eb2bf3358b556b7bb", "IPY_MODEL_1d91422f9843431abb1278c03d77358b"], "layout": "IPY_MODEL_ba0d02713666405da4fd9136472c1637"}}, "232ea2e58c2c47edb3cca5d349451c24": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_304106875198462cacb4c39027d9dcff", "style": "IPY_MODEL_c1fbf83b1be6440882c2d0a13acaab9c", "value": "<h4><b>Model Info</b></h4>"}}, "304106875198462cacb4c39027d9dcff": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "c1fbf83b1be6440882c2d0a13acaab9c": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "e14216c120bd49558165e7ba71077d6f": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_3e727b9787d14262a2e8f7cf95d7c326", "style": "IPY_MODEL_bc44ba97b31241e9bb743f3c8abac8af", "value": "<p>Summarize given model parameters. <a href=\"https://docs.deepchecks.com/0.9/checks_gallery/tabular/model_evaluation/plot_model_info.html?utm_source=display_output&utm_medium=referral&utm_campaign=check_link\" target=\"_blank\">Read More...</a></p>"}}, "3e727b9787d14262a2e8f7cf95d7c326": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "bc44ba97b31241e9bb743f3c8abac8af": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "94c2ed4f34ec426eb2bf3358b556b7bb": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_6307bae726de4bf6b167fbedb918f39c", "style": "IPY_MODEL_f6684c20b3544444984498f126855c97"}}, "6307bae726de4bf6b167fbedb918f39c": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "f6684c20b3544444984498f126855c97": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "1d91422f9843431abb1278c03d77358b": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_75321c93bfb34b809774db27e98374ee", "IPY_MODEL_3f5cb65ea9d447a9b04be4e92006c857", "IPY_MODEL_23c6fc063fcd499eab90759edb84959b", "IPY_MODEL_b777527600914023afd5aa6ff3dd2f21"], "layout": "IPY_MODEL_91d4fc5cf7744cdcac0d848c0139abe4"}}, "75321c93bfb34b809774db27e98374ee": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_a4e434f49f3f41218c3443b96f240190", "style": "IPY_MODEL_94d46ce490fd414aa7276c4f9ebd7c2a", "value": "<h5><b>Additional Outputs</b></h5>"}}, "a4e434f49f3f41218c3443b96f240190": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "94d46ce490fd414aa7276c4f9ebd7c2a": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "3f5cb65ea9d447a9b04be4e92006c857": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_a15c2cbb4757455eaad0e60d64f11f21", "style": "IPY_MODEL_0acf7b282c004f2493e3595ff8deb889", "value": "<div>Model Type: AdaBoostClassifier</div>"}}, "a15c2cbb4757455eaad0e60d64f11f21": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "0acf7b282c004f2493e3595ff8deb889": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "23c6fc063fcd499eab90759edb84959b": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_3f848e119a1f41838fa420a3565b395c", "style": "IPY_MODEL_c2c48dbb9b0142e2a922ad8db6981927", "value": "<style type=\"text/css\">\n#T_83475_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_83475_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_83475_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_83475_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_83475_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_83475_row2_col0, #T_83475_row2_col1, #T_83475_row2_col2 {\n  background-color: lightblue;\n}\n</style>\n<table id=\"T_83475_\">\n  <thead>\n    <tr>\n      <th class=\"col_heading level0 col0\" >Parameter</th>\n      <th class=\"col_heading level0 col1\" >Value</th>\n      <th class=\"col_heading level0 col2\" >Default</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_83475_row0_col0\" class=\"data row0 col0\" >algorithm</td>\n      <td id=\"T_83475_row0_col1\" class=\"data row0 col1\" >SAMME.R</td>\n      <td id=\"T_83475_row0_col2\" class=\"data row0 col2\" >SAMME.R</td>\n    </tr>\n    <tr>\n      <td id=\"T_83475_row1_col0\" class=\"data row1 col0\" >base_estimator</td>\n      <td id=\"T_83475_row1_col1\" class=\"data row1 col1\" >None</td>\n      <td id=\"T_83475_row1_col2\" class=\"data row1 col2\" >None</td>\n    </tr>\n    <tr>\n      <td id=\"T_83475_row2_col0\" class=\"data row2 col0\" >learning_rate</td>\n      <td id=\"T_83475_row2_col1\" class=\"data row2 col1\" >1.20</td>\n      <td id=\"T_83475_row2_col2\" class=\"data row2 col2\" >1.00</td>\n    </tr>\n    <tr>\n      <td id=\"T_83475_row3_col0\" class=\"data row3 col0\" >n_estimators</td>\n      <td id=\"T_83475_row3_col1\" class=\"data row3 col1\" >50</td>\n      <td id=\"T_83475_row3_col2\" class=\"data row3 col2\" >50</td>\n    </tr>\n    <tr>\n      <td id=\"T_83475_row4_col0\" class=\"data row4 col0\" >random_state</td>\n      <td id=\"T_83475_row4_col1\" class=\"data row4 col1\" >None</td>\n      <td id=\"T_83475_row4_col2\" class=\"data row4 col2\" >None</td>\n    </tr>\n  </tbody>\n</table>\n"}}, "3f848e119a1f41838fa420a3565b395c": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "c2c48dbb9b0142e2a922ad8db6981927": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "b777527600914023afd5aa6ff3dd2f21": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_d01a4a77cb384542b609a3cf8058fe8f", "style": "IPY_MODEL_3b9a906af7a449248607f3d9c64036bd", "value": "<div><p style=\"font-size:0.7em\"><i>Colored rows are parameters with non-default values</i></p></div>"}}, "d01a4a77cb384542b609a3cf8058fe8f": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "3b9a906af7a449248607f3d9c64036bd": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "91d4fc5cf7744cdcac0d848c0139abe4": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "ba0d02713666405da4fd9136472c1637": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}}}
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "bae0923e8b6c48d8aaece4bd5d7d420f"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.040 seconds)


.. _sphx_glr_download_checks_gallery_tabular_model_evaluation_plot_model_info.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_model_info.py <plot_model_info.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_model_info.ipynb <plot_model_info.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
